# whisper

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Info.plist  Makefile  README.md  TODO.md
assets/: AppIcon.icns
src/: config.rs  hotkey.rs  injector.rs  main.rs  menu_bar.rs  recorder.rs  transcriber.rs
